# GeeChat

./: .gitignore  ACKNOWLEDGEMENTS.md  CLA.md  LICENSE  Mobile-development.md  PRINCIPLES.md  README.md
.github/: CODEOWNERS
.github/workflows/: build-electron.yml  build-tauri.yml  cla.yml  deploy.yml  electron-release.yml  main-orchestrator.yml
chat4gamers/: .gitignore  .prettierignore  .prettierrc  .prettierrc-options  biome.json  eslint.config.mjs  index.js  package.json  turbo.json  vitest.config.mts
chat4gamers/apps/audio-native/: .gitignore  Cargo.toml  package.json
chat4gamers/apps/audio-native/benchmark/: bench.ts
chat4gamers/apps/audio-native/src/: lib.rs
chat4gamers/apps/desktop-tauri/: package.json
chat4gamers/apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
chat4gamers/apps/expo/: index.js  metro.config.js  package.json
chat4gamers/apps/expo/.claude/: ralph-loop.local.md
chat4gamers/apps/expo/app/: _layout.tsx
chat4gamers/apps/next/: .gitignore  index.js  main.js  main.ts  next.config.js  package.json  playwright.config.ts  preload.cjs  splash.html  types.d.ts
chat4gamers/apps/next/__tests__/: build.test.ts
chat4gamers/apps/next/app/: TauriTitleBar.tsx  globals.css  layout.tsx
chat4gamers/apps/next/e2e/: global-setup.ts  home.spec.ts  (+3 more)
chat4gamers/apps/server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  livekit-dev.yaml  livekit.yaml  livekit.yaml.template  package.json  setup.sh  tsconfig.json  vitest.config.ts
docs/: package.json
resources/: flow.mmd
(+42 files in other folders)
